# anime-schedule-rs

./: Cargo.toml  README.md
src/: anime.rs  api.rs  api_request.rs  auth.rs  category.rs  errors.rs  lib.rs  objects.rs  rate_limit.rs  timetables.rs  utils.rs
src/api/: account.rs  anime.rs  animelists.rs  category.rs  timetables.rs
src/objects/: account.rs  anime.rs  lists.rs
