[package]
name = "anime-schedule"
version = "0.1.0"
edition = "2021"

[features]
# use local integrated callback server for oauth requests
callback_server = ["dep:webbrowser", "dep:axum"]

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
chrono = { version = "0.4.38", features = ["serde"] }
strum = { version = "0.26.2", features = ["derive"] }
chrono-tz = "0.9.0"
thiserror = "1.0.58"
reqwest = { version = "0.12.3", features = ["json"] }
oauth2 = { version = "4.4.2", features = ["reqwest"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
const_format = "0.2.32"
# serde_qs official doesn't support repeat arras right now
serde_qs = { git = "https://github.com/MolotovCherry/serde_qs" }
serde_with = "3.7.0"
http = "1.1.0"

webbrowser = { version = "0.8.15", optional = true }
axum = { version = "0.7.5", optional = true }
