[package]
name = "animeschedule"
version = "0.1.6"
edition = "2021"
authors = ["Cherry"]
license = "MIT"
description = "A complete async/sync typed AnimeSchedule api"
repository = "https://github.com/MolotovCherry/anime-schedule-rs"
categories = ["api-bindings"]
keywords = ["api", "anime", "anime-schedule", "air", "episode"]

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
chrono = { version = "0.4.38", features = ["serde"] }
strum = { version = "0.26.2", features = ["derive"] }
chrono-tz = "0.9.0"
thiserror = "1.0.58"
reqwest = { version = "0.12.3", features = ["json", "multipart"] }
oauth2 = { version = "4.4.2", features = ["reqwest"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
const_format = "0.2.32"
# serde_qs official doesn't support repeat arrays right now
serde_qs = { version = "0.13.0", git = "https://github.com/MolotovCherry/serde_qs", rev = "7582cc2" }
serde_with = "3.7.0"
http = "1.1.0"
tracing = "0.1.40"
